--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -66,6 +66,50 @@
 		"remove_from_collection": "Remove from Collection",
 		"add_to_collection": "Add to Collection",
 		"delete": "Delete",
+		"not_found": "Adventure not found",
+		"not_found_desc": "The adventure you were looking for could not be found. Please try a different adventure or check back later.",
+		"homepage": "Homepage",
+		"adventure_details": "Adventure Details",
+		"collection": "Collection",
+		"adventure_type": "Adventure Type",
+		"longitude": "Longitude",
+		"latitude": "Latitude",
+		"visit": "Visit",
+		"visits": "Visits",
+		"create_new": "Create New...",
+		"adventure": "Adventure",
+		"count_txt": "results matching your search",
+		"sort": "Sort",
+		"order_direction": "Order Direction",
+		"order_by": "Order By",
+		"ascending": "Ascending",
+		"descending": "Descending",
+		"updated": "Updated",
+		"name": "Name",
+		"date": "Date",
+		"rating": "Rating",
+		"sources": "Sources",
+		"collection_adventures": "Include Collection Adventures",
+		"filter": "Filter",
+		"category_filter": "Category Filter",
+		"clear": "Clear",
+		"my_collections": "My Collections",
+		"open_filters": "Open Filters",
+		"close_filters": "Close Filters",
+		"archived_collections": "Archived Collections",
+		"share": "Share",
+		"private": "Private",
+		"public": "Public",
+		"archived": "Archived",
+		"edit_collection": "Edit Collection",
+		"unarchive": "Unarchive",
+		"archive": "Archive",
+		"archived_collection_message": "Collection archived successfully!",
+		"unarchived_collection_message": "Collection unarchived successfully!",
+		"delete_collection_success": "Collection deleted successfully!",
+		"delete_collection_warning": "Are you sure you want to delete this collection? This will also delete all of the linked adventures. This action cannot be undone.",
+		"cancel": "Cancel",
+		"delete_collection": "Delete Collection",
 		"activities": {
 			"general": "General 🌍",
 			"outdoor": "Outdoor 🏞️",
