--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -1,94 +1,138 @@
 {
-	"navbar": {
-		"adventures": "Aventuras",
-		"collections": "Colecciones",
-		"worldtravel": "Viajar por el Mundo",
-		"map": "Mapa",
-		"users": "Usuarios",
-		"login": "Iniciar Sesión",
-		"signup": "Registrarse",
-		"search": "Buscar",
-		"profile": "Perfil",
-		"greeting": "Hola",
-		"my_adventures": "Mis Aventuras",
-		"my_activities": "Mis Actividades",
-		"shared_with_me": "Compartido Conmigo",
-		"settings": "Configuraciones",
-		"logout": "Cerrar Sesión",
-		"about": "Acerca de AdventureLog",
-		"documentation": "Documentación",
-		"discord": "Discord",
-		"theme_selection": "Selección de Tema",
-		"themes": {
-			"light": "Claro",
-			"dark": "Oscuro",
-			"night": "Noche",
-			"forest": "Bosque",
-			"aestetic-dark": "Estético Oscuro",
-			"aestetic-light": "Estético Claro",
-			"aqua": "Aqua"
-		}
-	},
-	"about": {
-		"about": "Acerca de",
-		"license": "Licenciado bajo la Licencia GPL-3.0.",
-		"source_code": "Código Fuente",
-		"message": "Hecho con ❤️ en los Estados Unidos.",
-		"oss_attributions": "Atribuciones de Código Abierto",
-		"nominatim_1": "La búsqueda de ubicaciones y geocodificación es proporcionada por",
-		"nominatim_2": "Sus datos están licenciados bajo la licencia ODbL.",
-		"other_attributions": "Atribuciones adicionales se pueden encontrar en el archivo README.",
-		"close": "Cerrar"
-	},
-	"home": {
-		"hero_1": "Descubre las Aventuras Más Emocionantes del Mundo",
-		"hero_2": "Descubre y planifica tu próxima aventura con AdventureLog. Explora destinos impresionantes, crea itinerarios personalizados y mantente conectado en todo momento.",
-		"go_to": "Ir a AdventureLog",
-		"key_features": "Características Clave",
-		"desc_1": "Descubre, Planifica y Explora Fácilmente",
-		"desc_2": "AdventureLog está diseñado para simplificar tu viaje, brindándote las herramientas y recursos para planificar, empacar y navegar tu próxima aventura inolvidable.",
-		"feature_1": "Registro de Viajes",
-		"feature_1_desc": "Mantén un registro de tus aventuras con un diario de viaje personalizado y comparte tus experiencias con amigos y familiares.",
-		"feature_2": "Planificación de Viajes",
-		"feature_2_desc": "Crea fácilmente itinerarios personalizados y obtén un desglose diario de tu viaje.",
-		"feature_3": "Mapa de Viaje",
-		"feature_3_desc": "Visualiza tus viajes por el mundo con un mapa interactivo y explora nuevos destinos."
-	},
-	"adventures": {
-		"collection_remove_success": "¡Aventura eliminada de la colección con éxito!",
-		"collection_remove_error": "Error al eliminar la aventura de la colección",
-		"collection_link_success": "¡Aventura vinculada a la colección con éxito!",
-		"collection_link_error": "Error al vincular la aventura a la colección",
-		"adventure_delete_confirm": "¿Estás seguro de que quieres eliminar esta aventura? Esta acción no se puede deshacer.",
-		"open_details": "Abrir Detalles",
-		"edit_adventure": "Editar Aventura",
-		"remove_from_collection": "Eliminar de la Colección",
-		"add_to_collection": "Añadir a la Colección",
-		"delete": "Eliminar",
-		"activities": {
-			"activity": "Actividad 🏄",
-			"art_museums": "Arte",
-			"attraction": "Atracción 🎢",
-			"culture": "Cultura 🎭",
-			"dining": "Cenar 🍽️",
-			"event": "Evento 🎉",
-			"festivals": "Festivales 🎪",
-			"fitness": "Fitness 🏋️",
-			"general": "Generales 🌍",
-			"hiking": "Senderismo 🥾",
-			"historical_sites": "Sitios Históricos 🏛️",
-			"lodging": "Alojamiento 🛌",
-			"music_concerts": "Música",
-			"nightlife": "Vida nocturna 🌃",
-			"other": "Otro",
-			"outdoor": "Al aire libre 🏞️",
-			"shopping": "Compras 🛍️",
-			"spiritual_journeys": "Viajes espirituales 🧘‍♀️",
-			"transportation": "Transporte 🚗",
-			"volunteer_work": "Trabajo voluntario 🤝",
-			"water_sports": "Deportes acuáticos 🚤",
-			"wildlife": "Vida silvestre 🦒"
-		},
-		"no_image_found": "No se encontró ninguna imagen"
-	}
+  "navbar": {
+    "adventures": "Aventuras",
+    "collections": "Colecciones",
+    "worldtravel": "Viajar por el Mundo",
+    "map": "Mapa",
+    "users": "Usuarios",
+    "login": "Iniciar Sesión",
+    "signup": "Registrarse",
+    "search": "Buscar",
+    "profile": "Perfil",
+    "greeting": "Hola",
+    "my_adventures": "Mis Aventuras",
+    "my_activities": "Mis Actividades",
+    "shared_with_me": "Compartido Conmigo",
+    "settings": "Configuraciones",
+    "logout": "Cerrar Sesión",
+    "about": "Acerca de AdventureLog",
+    "documentation": "Documentación",
+    "discord": "Discord",
+    "theme_selection": "Selección de Tema",
+    "themes": {
+      "light": "Claro",
+      "dark": "Oscuro",
+      "night": "Noche",
+      "forest": "Bosque",
+      "aestetic-dark": "Estético Oscuro",
+      "aestetic-light": "Estético Claro",
+      "aqua": "Aqua"
+    }
+  },
+  "about": {
+    "about": "Acerca de",
+    "license": "Licenciado bajo la Licencia GPL-3.0.",
+    "source_code": "Código Fuente",
+    "message": "Hecho con ❤️ en los Estados Unidos.",
+    "oss_attributions": "Atribuciones de Código Abierto",
+    "nominatim_1": "La búsqueda de ubicaciones y geocodificación es proporcionada por",
+    "nominatim_2": "Sus datos están licenciados bajo la licencia ODbL.",
+    "other_attributions": "Atribuciones adicionales se pueden encontrar en el archivo README.",
+    "close": "Cerrar"
+  },
+  "home": {
+    "hero_1": "Descubre las Aventuras Más Emocionantes del Mundo",
+    "hero_2": "Descubre y planifica tu próxima aventura con AdventureLog. Explora destinos impresionantes, crea itinerarios personalizados y mantente conectado en todo momento.",
+    "go_to": "Ir a AdventureLog",
+    "key_features": "Características Clave",
+    "desc_1": "Descubre, Planifica y Explora Fácilmente",
+    "desc_2": "AdventureLog está diseñado para simplificar tu viaje, brindándote las herramientas y recursos para planificar, empacar y navegar tu próxima aventura inolvidable.",
+    "feature_1": "Registro de Viajes",
+    "feature_1_desc": "Mantén un registro de tus aventuras con un diario de viaje personalizado y comparte tus experiencias con amigos y familiares.",
+    "feature_2": "Planificación de Viajes",
+    "feature_2_desc": "Crea fácilmente itinerarios personalizados y obtén un desglose diario de tu viaje.",
+    "feature_3": "Mapa de Viaje",
+    "feature_3_desc": "Visualiza tus viajes por el mundo con un mapa interactivo y explora nuevos destinos."
+  },
+  "adventures": {
+    "collection_remove_success": "¡Aventura eliminada de la colección con éxito!",
+    "collection_remove_error": "Error al eliminar la aventura de la colección",
+    "collection_link_success": "¡Aventura vinculada a la colección con éxito!",
+    "collection_link_error": "Error al vincular la aventura a la colección",
+    "adventure_delete_confirm": "¿Estás seguro de que quieres eliminar esta aventura? Esta acción no se puede deshacer.",
+    "open_details": "Abrir Detalles",
+    "edit_adventure": "Editar Aventura",
+    "remove_from_collection": "Eliminar de la Colección",
+    "add_to_collection": "Añadir a la Colección",
+    "delete": "Eliminar",
+    "activities": {
+      "activity": "Actividad 🏄",
+      "art_museums": "Arte",
+      "attraction": "Atracción 🎢",
+      "culture": "Cultura 🎭",
+      "dining": "Cenar 🍽️",
+      "event": "Evento 🎉",
+      "festivals": "Festivales 🎪",
+      "fitness": "Fitness 🏋️",
+      "general": "Generales 🌍",
+      "hiking": "Senderismo 🥾",
+      "historical_sites": "Sitios Históricos 🏛️",
+      "lodging": "Alojamiento 🛌",
+      "music_concerts": "Música",
+      "nightlife": "Vida nocturna 🌃",
+      "other": "Otro",
+      "outdoor": "Al aire libre 🏞️",
+      "shopping": "Compras 🛍️",
+      "spiritual_journeys": "Viajes espirituales 🧘‍♀️",
+      "transportation": "Transporte 🚗",
+      "volunteer_work": "Trabajo voluntario 🤝",
+      "water_sports": "Deportes acuáticos 🚤",
+      "wildlife": "Vida silvestre 🦒"
+    },
+    "no_image_found": "No se encontró ninguna imagen",
+    "adventure_details": "Detalles de la aventura",
+    "adventure_type": "Tipo de aventura",
+    "collection": "Recopilación",
+    "homepage": "Página principal",
+    "latitude": "Latitud",
+    "longitude": "Longitud",
+    "not_found": "Aventura no encontrada",
+    "not_found_desc": "La aventura que buscabas no se pudo encontrar. \nPruebe una aventura diferente o vuelva a consultar más tarde.",
+    "visit": "Visita",
+    "visits": "Visitas",
+    "adventure": "Aventura",
+    "count_txt": "resultados que coinciden con su búsqueda",
+    "create_new": "Crear nuevo...",
+    "ascending": "Ascendente",
+    "collection_adventures": "Incluir aventuras de colección",
+    "date": "Fecha",
+    "descending": "Descendente",
+    "filter": "Filtrar",
+    "name": "Nombre",
+    "order_by": "Ordenar por",
+    "order_direction": "Dirección del pedido",
+    "rating": "Clasificación",
+    "sort": "Clasificar",
+    "sources": "Fuentes",
+    "updated": "Actualizado",
+    "category_filter": "Filtro de categoría",
+    "clear": "Claro",
+    "archived_collections": "Colecciones archivadas",
+    "close_filters": "Cerrar filtros",
+    "my_collections": "Mis colecciones",
+    "open_filters": "Abrir filtros",
+    "private": "Privado",
+    "public": "Público",
+    "archived_collection_message": "¡Colección archivada exitosamente!",
+    "delete_collection": "Eliminar colección",
+    "delete_collection_success": "¡Colección eliminada exitosamente!",
+    "delete_collection_warning": "¿Estás seguro de que deseas eliminar esta colección? \nEsto también eliminará todas las aventuras vinculadas. \nEsta acción no se puede deshacer.",
+    "unarchived_collection_message": "¡Colección desarchivada exitosamente!",
+    "archive": "Archivo",
+    "archived": "Archivado",
+    "edit_collection": "Editar colección",
+    "share": "Compartir",
+    "unarchive": "Desarchivar",
+    "cancel": "Cancelar"
+  }
 }
